Improve site info template parts

--- a/.dev/sass/partials/_menus.scss
+++ b/.dev/sass/partials/_menus.scss
@@ -1,27 +1,28 @@
 $menu-font-family: $header-font-family !default;
 $menu-background-color: transparent;
 
-.main-navigation{
+.main-navigation {
 	position: relative;
 	z-index: 100;
 
 	ul {
 		font-size: emCalc(16);
 		font-size: rem-calc(16);
-		position:relative;
+		position: relative;
 		display: block;
-		z-index:1;
+		z-index: 1;
 		margin: 0;
 		padding: 0;
 	}
 
 	li {
-		display:block;
-		float:none;
+		display: block;
+		float: none;
 		margin: 0;
 		padding: 0;
 		list-style: none;
 		text-align: center;
+
 		a {
 			display: block;
 			font-family: $menu-font-family;
@@ -39,11 +40,11 @@ $menu-background-color: transparent;
 				color: #181818;
 			}
 		}
-		
+
 		&.current-menu-item a {
 			color: #181818;
 		}
-		
+
 		&.menu-item-search span {
 			font-weight: 700;
 			font-size: 20px;
@@ -52,8 +53,8 @@ $menu-background-color: transparent;
 		}
 	}
 
-	.menu-item-has-children{
-		li > a{
+	.menu-item-has-children {
+		li > a {
 			padding-top: 1em;
 			padding-top: 1rem;
 			padding-bottom: 1em;
@@ -61,10 +62,12 @@ $menu-background-color: transparent;
 		}
 	}
 
-	@media all and ( min-width: 800px ){
+	@media all and (min-width: 900px) {
 		float: right;
-		li{
+
+		li {
 			text-align: left;
+
 			a {
 				padding: 2.5rem 1rem;
 			}
@@ -74,19 +77,20 @@ $menu-background-color: transparent;
 			padding: 0;
 			margin: 0;
 			list-style: none;
-			display:block;
+			display: block;
 
 			ul {
-				display:none;
-				position:absolute;
+				display: none;
+				position: absolute;
 			}
+
 			form {
 				display: none;
 				position: absolute;
 			}
 		}
 
-		a{
+		a {
 			border-bottom-width: 0;
 		}
 
@@ -96,63 +100,67 @@ $menu-background-color: transparent;
 			margin: 0;
 			list-style: none;
 			position: relative;
+
 			&.toggled {
 				a {
 					color: #181818;
 				}
+
 				> form {
-					display:block;
-					background-color: rgba(255,255,255,1);
-					width:250px;
+					display: block;
+					background-color: rgba(255, 255, 255, 1);
+					width: 250px;
 					padding: 15px;
 					right: 0;
+
 					input {
 						width: 100%;
 						box-sizing: border-box;
-						&:focus {
-						}
+
+						&:focus {}
 					}
+
 					input[type="submit"] {
 						display: none;
 					}
 				}
 			}
+
 			.sub-menu .menu-item-has-children {
-
 				&:hover {
-
 					> a:after {
-						border-left-color: contrast-color($menu-background-color,#000,#fff,50%);
+						border-left-color: contrast-color($menu-background-color, #000, #fff, 50%);
 					}
 				}
 
 				> a:after {
-					content:"";
-					display:block;
-					position:absolute;
-					top:50%;
-					right:.6em;
-					right:.6rem;
+					content: "";
+					display: block;
+					position: absolute;
+					top: 50%;
+					right: .6em;
+					right: .6rem;
 					margin-top: -6px;
-					border:5px solid transparent;
-					border-left-color: contrast-color($menu-background-color,darken($menu-background-color,65%),lighten($menu-background-color,65%),50%);
-					height:0;
-					width:0;
-					margin-left:10px;
+					border: 5px solid transparent;
+					border-left-color: contrast-color($menu-background-color, darken($menu-background-color, 65%), lighten($menu-background-color, 65%), 50%);
+					height: 0;
+					width: 0;
+					margin-left: 10px;
 				}
 			}
 
 			&.menu-item-has-children {
-
 				&:hover {
-					position:relative;
+					position: relative;
+
 					> a {
 						color: #181818;
 					}
+
 					> ul {
-						display:block;
-						background-color: rgba(255,255,255,1);
-						width:250px;
+						display: block;
+						background-color: rgba(255, 255, 255, 1);
+						width: 250px;
 
 						ul {
 							left: 100%;
@@ -160,8 +168,8 @@ $menu-background-color: transparent;
 						}
 
 						li {
-							float:none;
-							display:block;
+							float: none;
+							display: block;
 						}
 					}
 				}
@@ -176,8 +184,8 @@ $menu-background-color: transparent;
 	float: right;
 	padding: 23px 0 10px 10px;
 	position: absolute;
-    right: 10px;
-    width: 55px;
+	right: 10px;
+	width: 55px;
 	cursor: pointer;
 
 	div {
@@ -188,7 +196,7 @@ $menu-background-color: transparent;
 	}
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
 	.menu-toggle,
 	.main-navigation.toggled {
 		display: block;
@@ -203,12 +211,15 @@ $menu-background-color: transparent;
 	.main-navigation {
 		display: none;
 		top: 86px;
-		.admin-bar &{
-			top: 130px;
+
+		.admin-bar & {
+			top: 127px;
 		}
+
 		ul {
 			clear: both;
 			background: #fff;
+
 			.sub-menu {
 				padding-left: 1.5rem;
 			}
@@ -222,41 +233,44 @@ $menu-background-color: transparent;
 				display: block;
 				text-align: left;
 				padding: 0.5rem 1rem;
+
 				&.search-toggle {
 					display: none;
 				}
 			}
 
 			&.menu-item-has-children {
-
 				&:hover {
 					> a:after {
 						border-top-color: transparent;
-						border-left-color: contrast-color($menu-background-color,#000,#fff,50%);
+						border-left-color: contrast-color($menu-background-color, #000, #fff, 50%);
 					}
 				}
 
 				> a:after {
-					content:"";
-					display:block;
-					position:absolute;
-					top:50%;
-					right:.6em;
-					right:.6rem;
+					content: "";
+					display: block;
+					position: absolute;
+					top: 50%;
+					right: .6em;
+					right: .6rem;
 					margin-top: -6px;
-					border:5px solid transparent;
-					border-left-color: contrast-color($menu-background-color,darken($menu-background-color,65%),lighten($menu-background-color,65%),50%);
-					height:0;
-					width:0;
-					margin-left:10px;
+					border: 5px solid transparent;
+					border-left-color: contrast-color($menu-background-color, darken($menu-background-color, 65%), lighten($menu-background-color, 65%), 50%);
+					height: 0;
+					width: 0;
+					margin-left: 10px;
 				}
 			}
+
 			.search-submit {
 				display: none;
 			}
+
 			.search-form {
 				@include clearfix;
 			}
+
 			.search-field {
 				margin: 1rem;
 				float: left;
@@ -265,12 +279,22 @@ $menu-background-color: transparent;
 	}
 }
 
+@media screen and (max-width: 782px) {
+	.main-navigation {
+		.admin-bar & {
+			top: 132px;
+		}
+	}
+}
+
 .navigation {
 	@extend .row;
 
-	.nav-links{
+	.nav-links {
 		@extend .large-12;
+
 		@extend .columns;
+
 		margin-bottom: 1em;
 		margin-bottom: 1rem;
 	}
