--- a/.dev/sass/partials/_header.scss
+++ b/.dev/sass/partials/_header.scss
@@ -1,23 +1,26 @@
-$entry-title-bg: rgba(0,0,0,.6) !default;
+$entry-title-bg: rgba(0, 0, 0, 0.6) !default;
 
 body {
 	background: #f4f4f4;
 }
 
-.site-title-wrapper{
+.site-title-wrapper {
 	@extend .row;
+
 	margin-bottom: 40px;
 }
 
-.site-title-wrapper-inner{
+.site-title-wrapper-inner {
 	@extend .large-12;
+
 	@extend .columns;
 }
 
 .site-title-contain {
 	float: left;
 	margin: 20px 0;
-	@media all and ( min-width: 800px ){
+
+	@media all and (min-width: 800px) {
 		margin-top: 29px;
 	}
 }
@@ -25,9 +28,11 @@ body {
 .site-logo {
 	float: left;
 	margin: 21px 0;
-	@media all and ( min-width: 800px ){
+
+	@media all and (min-width: 800px) {
 		margin: 28px 0;
 	}
+
 	img {
 		display: block;
 		max-height: 43px;
@@ -51,12 +56,12 @@ body {
 	}
 }
 
-.site-description{
+.site-description {
 	font-size: emCalc(14);
 	font-size: rem-calc(14);
 	text-transform: uppercase;
 	letter-spacing: 0.3px;
-	color: lighten($body-font-color,50%);
+	color: lighten($body-font-color, 50%);
 	font-family: $sans-font-family;
 	float: left;
 }
@@ -65,6 +70,7 @@ body {
 	background-color: $header-bg-color;
 	letter-spacing: -.01em;
 	padding: 0 2rem;
+
 	@media screen and (max-width: 800px) {
 		width: 100%;
 		background: #fff;
@@ -73,28 +79,31 @@ body {
 	}
 }
 
-.featured-content{
-	.entry-header{
+.featured-content {
+	.entry-header {
 		background-size: cover;
 
 		&,
 		.entry-title,
-		.entry-title a{
+		.entry-title a {
 			color: white;
 		}
 
-		.entry-header-row{
+		.entry-header-row {
 			@extend .row;
 		}
 
-		.entry-header-column{
+		.entry-header-column {
 			@extend .large-8;
+
 			@extend .medium-12;
+
 			@extend .small-12;
+
 			@extend .columns;
 
 			background-color: $entry-title-bg;
-			color: contrast-color($entry-title-bg,#000,#fff,50%);
+			color: contrast-color($entry-title-bg, #000, #fff, 50%);
 			margin-top: 6em;
 			margin-top: 6rem;
 			padding: 1.5em 4em 0;
@@ -110,21 +119,21 @@ body {
 
 		.entry-meta,
 		.entry-title,
-		.entry-excerpt{
+		.entry-excerpt {
 			margin-bottom: 1.5rem;
 		}
 
-		.entry-meta{
-			color: contrast-color($entry-title-bg,#000,#fff,50%);
-			border-bottom: 1px solid rgba(255,255,255,.2);
+		.entry-meta {
+			color: contrast-color($entry-title-bg, #000, #fff, 50%);
+			border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 			line-height: 3rem;
 
-			.entry-date{
+			.entry-date {
 				float: right;
 			}
 		}
 
-		.entry-title{
+		.entry-title {
 			font-size: rem-calc(42);
 			line-height: 1.2;
 			font-family: $sans-font-family;
@@ -132,7 +141,7 @@ body {
 		}
 
 		.entry-excerpt {
-			p{
+			p {
 				font-style: italic;
 				font-size: emCalc(19);
 				font-size: rem-calc(19);
@@ -140,15 +149,15 @@ body {
 			}
 		}
 
-		.post-format{
+		.post-format {
 			color: $primary-color;
 		}
 
-		.read-more{
+		.read-more {
 			padding: .5em 1em;
 			padding: .5rem 1rem;
 			background-color: $primary-color;
-			color: contrast-color($primary-color,#fff,#000,50%);
+			color: contrast-color($primary-color, #fff, #000, 50%);
 			display: inline-block;
 			font-family: $sans-font-family;
 			text-transform: uppercase;
@@ -156,118 +165,48 @@ body {
 			font-size: emCalc(13);
 			font-size: rem-calc(13);
 
-			&:hover{
-				background-color: darken($primary-color,10%);
-			}
-		}
-	}
-}
-html {
-	-webkit-font-smoothing: antialiased;
-}
-.hero-area {
-	background: rgba(0,0,0,.1);
-	@include clearfix;
-	.left-img {
-		display: block;
-	}
-	.hero-widget {
-		padding: 4%;
-		.textwidget {
-			line-height: 30px;
-			font-size: 18px;
-			p {
-				line-height: 30px;
-				font-size: 18px;
-			}
-		}
-		h2.widget-title {
-			font-weight: 100;
-			font-size: emCalc(48);
-			line-height: 60px;
-			margin-bottom: 45px;
-			&:after {
-				content: " ";
-				height: 2px;
-				background: #181818;
-				width: 25%;
-				position: absolute;
-				bottom: -15px;
-				left: 0;
-			}
-		}
-	}
-	@media screen and (min-width: 1000px) {
-		.left-img {
-			max-width: 50%;
-			display: block;
-			float: left;
-		}
-		.hero-widget {
-			width: 50%;
-			float: left;
-			padding: 3%;
-			.textwidget {
-				line-height: 30px;
-				font-size: 18px;
-				p {
-					line-height: 30px;
-					font-size: 18px;
-				}
-			}
-			h2.widget-title {
-				font-weight: 100;
-				font-size: emCalc(48);
-				line-height: 60px;
-				margin-bottom: 45px;
-				&:after {
-					content: " ";
-					height: 2px;
-					background: #181818;
-					width: 25%;
-					position: absolute;
-					bottom: -15px;
-					left: 0;
-				}
-			}
-		}
-	}
-	@media screen and (min-width: 1500px) {
-		.hero-widget {
-			width: 50%;
-			float: left;
-			padding: 7%;
-			.textwidget {
-				line-height: 30px;
-				font-size: 18px;
-				p {
-					line-height: 30px;
-					font-size: 18px;
-				}
-			}
-			h2.widget-title {
-				font-weight: 100;
-				font-size: emCalc(72);
-				line-height: 72px;
-				margin-bottom: 60px;
-				&:after {
-					content: " ";
-					height: 2px;
-					background: #181818;
-					width: 25%;
-					position: absolute;
-					bottom: -30px;
-					left: 0;
-				}
+			&:hover {
+				background-color: darken($primary-color, 10%);
 			}
 		}
 	}
 }
 
-.page-header{
-	.page-title,
-	.archive-title{
-		margin: 1em .5em;
-		text-align: center;
+html {
+	-webkit-font-smoothing: antialiased;
+}
+
+.hero {
+	@include clearfix;
+
+	background: rgba(0, 0, 0, 0.1);
+	background-size: 50%;
+	background-position: top left;
+	background-repeat: no-repeat;
+	min-height: 600px;
+
+	.hero-inner {
+		width: 50%;
+		float: right;
+		padding: 4%;
 	}
+
+	@media screen and (max-width: 900px) {
+		background-size: cover;
+		min-height: 0;
+
+		.hero-inner {
+			width: 100%;
+			float: none;
+		}
+
+		* {
+			color: #fff;
+		}
+	}
+}
+
+.page-header .page-title {
+	margin: 1em .5em;
+	text-align: center;
 }
