--- a/style-rtl.css
+++ b/style-rtl.css
@@ -3550,8 +3550,7 @@ html {
   -webkit-background-size: 50% 50%;
   background-size: 50%;
   background-position: top right;
-  background-repeat: no-repeat;
-  min-height: 600px; }
+  background-repeat: no-repeat; }
   .hero:before, .hero:after {
     content: " ";
     display: table; }
