--- a/style-rtl.css
+++ b/style-rtl.css
@@ -1,17 +1,17 @@
 @charset "UTF-8";
 /**
  * Theme Name: Mins
- * Theme URI: https://wordpress.org/themes/mins/
+ * Theme URI: https://wordpress.org/themes/mins
  * Author: GoDaddy
  * Author URI: https://www.godaddy.com/
- * Description: Mins is a minimalistic child theme for the Primer theme.
+ * Description: Mins is a Primer child theme with a minimal design.
  * Version: 1.0.0
  * License: GPL-2.0
  * License URI: https://www.gnu.org/licenses/gpl-2.0.html
  * Text Domain: mins
  * Domain Path: /languages
- * Tags: custom-background, custom-colors, custom-header, custom-menu, editor-style, featured-images, flexible-header, left-sidebar, one-column, right-sidebar, rtl-language-support, sticky-post, threaded-comments, three-columns, translation-ready, two-columns
  * Template: primer
+ * Tags: custom-background, custom-colors, custom-header, custom-menu, editor-style, featured-images, flexible-header, left-sidebar, one-column, right-sidebar, rtl-language-support, sticky-post, threaded-comments, three-columns, translation-ready, two-columns
  *
  * This theme, like WordPress, is licensed under the GPL.
  * Use it to make something cool, have fun, and share what you've learned with others.
