Updated header/nav design. Fixed #10.

--- a/.dev/sass/partials/_header.scss
+++ b/.dev/sass/partials/_header.scss
@@ -45,7 +45,7 @@ body {
 	font-size: emCalc(22);
 	font-size: rem-calc(22);
 	font-weight: normal;
-	color: contrast-color($menu-background-color, #fff, #000, 50%);
+	color: contrast-color($white, #fff, #000, 50%);
 	line-height: 1;
 	font-weight: 700;
 	text-transform: uppercase;
