Open menu using css

--- a/.dev/sass/partials/_menus.scss
+++ b/.dev/sass/partials/_menus.scss
@@ -16,6 +16,10 @@ $menu-background-color: transparent;
 	display: none;
 	font-family: $header-font-family;
 
+  &.open {
+    display: block;
+  }
+
 	@media #{$medium-up}{
 		display: block;
 	}
