--- a/.dev/sass/variables/_variables.scss
+++ b/.dev/sass/variables/_variables.scss
@@ -84,3 +84,5 @@ $widget-font-size: rem-calc(.9);
 // ------------
 
 $header-bg-color: white;
+$header-bg-hover-color: darken(white,10%);
+$header-text-color: $black;
