--- a/.dev/sass/partials/_footer.scss
+++ b/.dev/sass/partials/_footer.scss
@@ -136,17 +136,22 @@ $site-footer-info-anchor-color-hover: contrast-color($site-footer-info-backgroun
 	.site-info-text{
 		color: rgba(0,0,0,.5);
 		text-align: center;
+		font-size: .9em;
+
 		a[rel="designer"] {
 			color: rgba(0,0,0,.5);
 		}
+
 		.menu {
 			display: none;
 			padding: 0;
 			margin: 0 0 10px 0;
 			list-style: none;
+
 			li {
 				display: inline;
 				padding-right: 30px;
+
 				a {
 					text-transform: uppercase;
 					font-weight: 700;
@@ -155,10 +160,12 @@ $site-footer-info-anchor-color-hover: contrast-color($site-footer-info-backgroun
 				}
 			}
 		}
+
 		@media screen and (min-width: 769px) {
 			text-align: left;
 			float: left;
 			width: 50%;
+
 			.menu {
 				display: block;
 			}
@@ -168,24 +175,29 @@ $site-footer-info-anchor-color-hover: contrast-color($site-footer-info-backgroun
 	.site-info{
 		padding: 2.5rem 2rem;
 		overflow: hidden;
+
 		.social-menu {
 			margin-top: 15px;
+
 			@media screen and (min-width: 769px) {
 				float: right;
 				width: 50%;
 				margin: 0;
 			}
+
 			ul{
 				text-align: center;
 				margin-right: 0;
+
 				li:last-child a {
 					margin-right: 0;
 				}
+
 				@media screen and (min-width: 769px) {
 					text-align: right;
 				}
 			}
-			
+
 			li {
 				padding: 0;
 			}
@@ -193,6 +205,7 @@ $site-footer-info-anchor-color-hover: contrast-color($site-footer-info-backgroun
 			a{
 				margin-right: 15px;
 				color: #181818;
+
 				&:before {
 					font-size: 36px;
 					padding: 0;
@@ -208,4 +221,43 @@ $site-footer-info-anchor-color-hover: contrast-color($site-footer-info-backgroun
 		@extend .large-12;
 		@extend .columns;
 	}
+}
+
+.footer-menu {
+	float: left;
+
+	ul {
+		list-style: none;
+		margin: 0 0 5px;
+		padding: 0;
+		text-align: center;
+
+		@media #{$medium-up} {
+			text-align: left;
+		}
+
+		li {
+			display: inline-block;
+			font-size: .875rem;
+			font-weight: 600;
+			margin: 0 10px;
+			text-align: center;
+			text-transform: uppercase;
+
+			&:first-of-type{
+				margin-left: 0;
+			}
+
+			@media only screen and (min-width: 568px) {
+				text-align: left;
+			}
+
+			a {
+				color: $body-font-color;
+			}
+
+		}
+
+	}
+
 }
